# C-Project-1-Server-CE-2103

./: .gitignore  CMakeLists.txt  Doxyfile Server C!  README.md  main.cpp
html/: _cast__to___type_8h_source.html  _char_8h_source.html  _convert___value_8h_source.html  _convert__request_8h_source.html  _create___type_8h_source.html  _data___type_8h_source.html  _double_8h_source.html  _float_8h_source.html  _integer_8h_source.html  _j_s_o_n___management_8h_source.html  _long_8h_source.html  _memory___management_8h_source.html  _memory___map_8h_source.html  _modify___type_8h_source.html  _ram_l_v_8h_source.html  _recycling__malloc_8h_source.html  _response_8h_source.html  _search___type_8h_source.html  _server_8h_source.html  _simply_list_8h_source.html  _type_message_8h_source.html  annotated.html  class_cast__to___type-members.html  class_cast__to___type.html  class_char-members.html  class_char.html  class_char__coll__graph.dot  class_convert___value-members.html  class_convert___value.html  class_convert__request-members.html  class_convert__request.html  class_create___type-members.html  class_create___type.html  class_data___type-members.html  class_data___type.html  class_data___type__inherit__graph.dot  class_double-members.html  class_double.html  class_double__inherit__graph.dot  class_float-members.html  (+71 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+7 more)
src/Actions/: Cast_to_Type.cpp  Cast_to_Type.h  Convert_Value.cpp  Convert_Value.h  Create_Type.cpp  Create_Type.h  Modify_Type.cpp  Modify_Type.h  Search_Type.cpp  Search_Type.h
src/Convert_message/: Convert_request.h  TypeMessage.cpp  TypeMessage.h
src/Data_Types/: Char.cpp  Char.h  Data_Type.h  Datatype.h  Double.cpp  Double.h  Float.cpp  Float.h  Integer.cpp  Integer.h  Long.cpp  Long.h  RamLV.cpp  Recycling_malloc.h  Response.h  SImplyList.h  SimplyList.h  Values_chain.h
src/MM/: MemoryManagement.h  Memory_Management.h  Memory_Map.h
src/Memory Management/: Memory_Management.cpp  Memory_Management.h  Memory_Map.cpp  Memory_Map.h
src/MessageJson/: Convert_request.cpp  Convert_request.h  JSON_Management.h  RamLV.h  Response.h  TypeMessage.cpp  TypeMessage.h
src/Socket/: Server.cpp  Server.h
src/TypeConversion/: JSON_Management.h  ObjectToJSON.h
